--- a/ch01.ipynb
+++ b/ch01.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Chapter 1: Introducing Polars"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2",
    "metadata": {},
    "source": [
     "## What Is This Thing Called Polars?"
@@ -26,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3",
    "metadata": {},
    "source": [
     "### Key Features"
@@ -33,6 +37,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4",
    "metadata": {},
    "source": [
     "### Key Concepts"
@@ -40,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5",
    "metadata": {},
    "source": [
     "### Advantages"
@@ -47,6 +53,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Why You Should Use Polars"
@@ -54,6 +61,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7",
    "metadata": {},
    "source": [
     "### Performance"
@@ -61,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8",
    "metadata": {},
    "source": [
     "### Usability"
@@ -68,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9",
    "metadata": {},
    "source": [
     "### Popularity"
@@ -75,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10",
    "metadata": {},
    "source": [
     "### Sustainability"
@@ -82,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Polars Compared to Other Data Processing Packages"
@@ -89,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Why We Focus on Python Polars"
@@ -96,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13",
    "metadata": {},
    "source": [
     "## How This Book Is Organized"
@@ -103,6 +117,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14",
    "metadata": {},
    "source": [
     "## An ETL Showcase"
@@ -110,6 +125,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15",
    "metadata": {},
    "source": [
     "### Extract"
@@ -117,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16",
    "metadata": {},
    "source": [
     "#### Import packages"
@@ -125,16 +142,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The command below builds the polars_geo plugin used in this chapter\n",
-    "! cd plugins/polars_geo && uv run maturin develop --release"
+    "! cd plugins/polars_geo && uv run --active maturin develop --release"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20",
    "metadata": {},
    "source": [
     "#### Download and extract Citi Bike trips"
@@ -165,6 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23",
    "metadata": {},
    "source": [
     "#### Read Citi Bike trips into a Polars DataFrame"
@@ -198,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +265,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27",
    "metadata": {},
    "source": [
     "#### Read in neighborhoods from GeoJSON"
@@ -246,6 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +307,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30",
    "metadata": {},
    "source": [
     "### Bonus: Visualizing Neighborhoods and Stations"
@@ -285,6 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,6 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34",
    "metadata": {},
    "source": [
     "### Transform"
@@ -361,6 +396,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35",
    "metadata": {},
    "source": [
     "#### Clean up columns"
@@ -369,6 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,6 +432,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37",
    "metadata": {},
    "source": [
     "#### Clean up rows"
@@ -403,6 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39",
    "metadata": {},
    "source": [
     "#### Add trip distance"
@@ -433,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,6 +496,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41",
    "metadata": {},
    "source": [
     "#### Add borough and neighborhood"
@@ -463,6 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,6 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,6 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,6 +575,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45",
    "metadata": {},
    "source": [
     "### Bonus: Visualizing Daily Trips per Borough"
@@ -538,6 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,6 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,6 +634,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48",
    "metadata": {},
    "source": [
     "### Load"
@@ -593,6 +642,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49",
    "metadata": {},
    "source": [
     "#### Write partitions"
@@ -601,6 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,6 +667,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51",
    "metadata": {},
    "source": [
     "#### Verify"
@@ -624,6 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,6 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +695,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54",
    "metadata": {},
    "source": [
     "### Bonus: Becoming Faster by Being Lazy"
@@ -649,6 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,13 +812,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56",
    "metadata": {},
    "source": [
     "## Takeaways"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.12 (.reprex)",
+   "language": "python",
+   "name": ".reprex"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
